--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/J2EE 1.4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/struts1"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/oracle"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/dbcp"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/dbpool"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
