修正样式，重写测试用例 测试用例反映了部分api的用法
Signed-off-by: CatfoOD <yanming-sohu@sohu.com>

--- a/WEB-INF/classes/test/datasource.conf
+++ b/WEB-INF/classes/test/datasource.conf
@@ -25,10 +25,10 @@ poolClassName=jym.sim.pool.DbcpPool
 
 ## 创建独立数据源使用的登录配置
 
-driverClassName=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@
-username=admin
-password=admin
+driverClassName=sun.jdbc.odbc.JdbcOdbcDriver
+url=jdbc:odbc:odbc2
+username=
+password=
 maxActive=200
 maxIdle=100
 maxWait=5
@@ -37,5 +37,5 @@ maxWait=5
 
 ## 一条测试到数据库连接有效性的sql语句
 
-validation=SELECT dummy FROM DUAL
+validation=
 
