Signed-off-by: CatfoOD <yanming-sohu@sohu.com>

--- a/WEB-INF/src/test/datasource.conf
+++ b/WEB-INF/src/test/datasource.conf
@@ -26,9 +26,9 @@ poolClassName=jym.sim.pool.DbcpPool
 ## 创建独立数据源使用的登录配置
 
 driverClassName=sun.jdbc.odbc.JdbcOdbcDriver
-url=jdbc:odbc:odbc2
-username=
-password=
+url=jdbc:odbc:access
+username=jym
+password=jym
 maxActive=200
 maxIdle=100
 maxWait=5
