--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -4,17 +4,62 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-	<servlet>
+
+	<filter>
+		<description>字符编码过滤器，指定 UTF-8</description>
+		<filter-name>CharsetFilter</filter-name>
+		<filter-class>jym.sim.util.CharsetFilter</filter-class>
+		<init-param>
+			<param-name>encode</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
 	
-		<servlet-name></servlet-name>
-		<servlet-class></servlet-class>
+	<filter-mapping>
+		<filter-name>CharsetFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+
+	<servlet>
+		<servlet-name>demo</servlet-name>
+		<servlet-class>继承自jym.sim.base.HttpBase的servlet</servlet-class>
 		
 		<init-param>
-		<!-- beanclass配置值即为HttpBase中formbean的类 -->
+			<description>
+				beanclass配置值即为HttpBase中formbean的类,
+				如果servelt重写了getBeanClass()并返回非空值,则该配置无效
+			</description>
 			<param-name>beanclass</param-name>
 			<param-value></param-value>
 		</init-param>
-		
 	</servlet>
+	
+	
+	<servlet>
+		<description>应答对脚本请求,脚本必须使用UTF-8编码</description>
+		<servlet-name>javascript-provider</servlet-name>
+		<servlet-class>jym.sim.js.ScriptServlet</servlet-class>
+		
+		<!-- 如果没有附加的js映射可以删除init-param节点 -->
+		<init-param>
+			<description>
+				javascript文件映射配置文件,必须在类路径中,多个文件使用','分割,
+				/jym/javascript/js_mapping.conf 默认总是加载,可以省略
+			</description>
+			<param-name>mappingConfigs</param-name>
+			<param-value>/jym/javascript/js_mapping.conf</param-value>
+		</init-param>
+		<init-param>
+			<description>如果为true,则不压缩输出的js脚本;默认为false,压缩脚本</description>
+			<param-name>debug</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>javascript-provider</servlet-name>
+		<url-pattern>*.js</url-pattern>
+	</servlet-mapping>
 	
 </web-app>
