集成了jsx脚本
Signed-off-by: CatfoOD <yanming-sohu@sohu.com>

--- a/WEB-INF/src/jym/javascript/js_mapping.conf
+++ b/WEB-INF/src/jym/javascript/js_mapping.conf
@@ -2,7 +2,10 @@
 
 ## 格式: URL=FILE
 ## FILE: [classpath:]path
-## 如果有classpath:,则js从指定的classpath类加载器中加载,否则从/WEB-INF/中寻找文件
+## 如果有classpath:,则js从指定的classpath类加载器中加载,否则从/webroot中寻找文件
 
-# 一个样例:
-# /js/comm.js = classpath:/com/llb/fw/js/file/comm.js
+/js/JSX/jsx.js			= classpath:/jym/javascript/jsx/jsx.js
+/js/JSX/ajax.js			= classpath:/jym/javascript/jsx/ajax.js
+/js/JSX/compatible.js	= classpath:/jym/javascript/jsx/compatible.js
+/js/JSX/selector.js		= classpath:/jym/javascript/jsx/selector.js
+/js/JSX/styleditor.js	= classpath:/jym/javascript/jsx/styleditor.js
