解析(sql)中的变量允许有空格;新的检查文件被改变的方法; 含有'!secure'的文件名不会被打包
Signed-off-by: CatfoOD <yanming-sohu@sohu.com>

--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/struts2"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/java tools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mysql"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/oracle"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
