移动test模块路径, 完成数学表达式解析
Signed-off-by: CatfoOD <yanming-sohu@sohu.com>

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 		</description>
 		
 		<servlet-name>demo</servlet-name>
-		<servlet-class>test.ServletDemo</servlet-class>
+		<servlet-class>jym.sim.test.util.ServletDemo</servlet-class>
 		
 		<init-param>
 			<description>
