重构一些代码,准备sqlserver分页
Signed-off-by: CatfoOD <yanming-sohu@sohu.com>

--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/java tools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mysql"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/oracle"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/sql_server"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
