--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.5.0_11"/>
 	<classpathentry kind="src" path="WEB-INF/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/dbcp"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/dbpool"/>
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mysql"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/oracle"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/sql_server"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/NeuralNetwork"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
